# PythonDancer

./: .gitignore  Dockerfile  README.md  build.bat  builder.py  dancerUI.ui  kinter.py  kinter.spec  libfun.py  pyproject.toml  qt.py  qt.spec  requirements.txt  test.py  ui_entry.py  util.py
.github/workflows/: docker-image.yml  windows-build.yml
dancer/: __init__.py  __main__.py  cli.py  libfun.py  ui.py  util.py
dancer/dancer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extra-hooks/: hook-librosa.py  hook-librosa.rdata.py
pythondancer/: cli.py  libfun.py  ui.py
scripts/: fetch_binaries.py
